<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Spaghetti</string>
    <string name="invalid_transfer_amount">Invalid transfer amount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Main Menu</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="google_client_id" tools:ignore="TypographyDashes">308770941548-1mlflanlicqq21sah7odbo8jghacksu2.apps.googleusercontent.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_transfer">Send or Request</string>
    <string name="menu_requests">Requests</string>
    <string name="menu_itransfer">Transfer Between Accounts</string>
    <string name="menu_bet">Bets</string>
    <string name="menu_checking">Checking</string>
    <string name="menu_saving">Savings</string>
    <string name="menu_loan">Loans</string>
    <string name="menu_stock">Stocks</string>
    <string name="accounts">Accounts</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="spaghetti">spaghetti</string>
    <string name="current_loans">Current Loans</string>
    <string name="open_new_loan">Open New Loan</string>
    <string name="open_new_account">Open New Account</string>
    <string name="preference_file_key">spaghetti_HD1SSCgDmEUOkcQZ</string>
    <string name="stock_name">stock_name</string>
    <string name="share_cost">share_cost</string>
    <string name="amount_difference">amount_difference</string>
    <string name="percent_difference">percent_difference</string>
    <string name="id_token">id_token</string>
    <string name="login_failed">Failed to login.</string>
    <string name="NetworkError">Network Error</string>
    <string name="sign_out">Sign Out</string>
    <string name="this_page_intentionally_left_blank">This Page Intentionally Left Blank</string>
    <string name="steaming_spaghetti_plate">Steaming Spaghetti Plate</string>
    <string name="savings_accounts_header">Current Savings Accounts</string>
    <string name="home_fragment_label">Net Worth</string>
    <string name="cancel">Cancel</string>
    <string name="send_request">Send / Request</string>
    <string name="amount">amount</string>
    <string name="transfer_complete">Transfer submitted.</string>
    <string name="transfer_failed">You cannot request transfers that do not involve you.</string>
    <string name="outbound">Outbound</string>
    <string name="inbound">Inbound</string>
    <string name="send">Send</string>
    <string name="deny">Deny</string>
    <string name="request_accept_success">Accepted request.</string>
    <string name="request_accept_fail">Failed to accept request.</string>
    <string name="request_deny_success">Denied request.</string>
    <string name="request_deny_fail">Failed to deny request.</string>
    <string name="request_cancel_success">Cancelled request.</string>
    <string name="request_cancel_fail">Failed to cancel request.</string>
    <string name="unspecified_error">An unknown error has occurred.</string>
    <string name="server_unreachable">The server is unreachable.</string>
</resources>
