<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_transfer"
            android:icon="@drawable/ic_menu_transfer"
            android:title="@string/menu_transfer" />
        <item
            android:id="@+id/nav_bet"
            android:icon="@drawable/ic_menu_bet"
            android:title="@string/menu_bet" />

    </group>

    <item android:title="@string/accounts">
        <menu>
            <item
                android:id="@+id/nav_itransfer"
                android:icon="@drawable/ic_menu_itransfer"
                android:title="@string/menu_itransfer" />
            <item
                android:id="@+id/nav_checking"
                android:icon="@drawable/ic_menu_checking"
                android:title="@string/menu_checking" />
            <item
                android:id="@+id/nav_saving"
                android:icon="@drawable/ic_menu_saving"
                android:title="@string/menu_saving" />
            <item
                android:id="@+id/nav_loan"
                android:icon="@drawable/ic_menu_loan"
                android:title="@string/menu_loan" />
            <item
                android:id="@+id/nav_stock"
                android:icon="@drawable/ic_menu_stock"
                android:title="@string/menu_stock" />
        </menu>
    </item>

</menu>
