<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dev.miramontes.spaghetti.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_transfer"
        android:name="dev.miramontes.spaghetti.ui.transfer.TransferFragment"
        android:label="@string/menu_transfer"
        tools:layout="@layout/fragment_transfer" />

    <fragment
        android:id="@+id/nav_requests"
        android:name="dev.miramontes.spaghetti.ui.requests.RequestsFragment"
        android:label="@string/menu_requests"
        tools:layout="@layout/fragment_requests" />

    <fragment
        android:id="@+id/nav_bet"
        android:name="dev.miramontes.spaghetti.ui.bet.BetFragment"
        android:label="@string/menu_bet"
        tools:layout="@layout/fragment_bet" />

    <fragment
        android:id="@+id/nav_itransfer"
        android:name="dev.miramontes.spaghetti.ui.itransfer.ITransferFragment"
        android:label="@string/menu_itransfer"
        tools:layout="@layout/fragment_itransfer" />

    <fragment
        android:id="@+id/nav_checking"
        android:name="dev.miramontes.spaghetti.ui.checking.CheckingFragment"
        android:label="@string/menu_checking"
        tools:layout="@layout/fragment_checking" />

    <fragment
        android:id="@+id/nav_saving"
        android:name="dev.miramontes.spaghetti.ui.saving.SavingFragment"
        android:label="@string/menu_saving"
        tools:layout="@layout/fragment_saving" />

    <fragment
        android:id="@+id/nav_loan"
        android:name="dev.miramontes.spaghetti.ui.loan.LoanFragment"
        android:label="@string/menu_loan"
        tools:layout="@layout/fragment_loan" />

    <fragment
        android:id="@+id/nav_stock"
        android:name="dev.miramontes.spaghetti.ui.stock.StockFragment"
        android:label="@string/menu_stock"
        tools:layout="@layout/fragment_stock" />
</navigation>